rnsc/test_data/rns_integration/error/parser/instructions/ldc_access_flag.rns
.class LdcAccessFlag
.super java/lang/Object

.method static main ([Ljava/lang/String;)V
  .code stack 2 locals 1
    ldc public
    return
  .code_end
.method_end
.class_end
